feat: use hugging-face provider for LLM tools

--- a/lambda/generator/playground.ipynb
+++ b/lambda/generator/playground.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11560a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_huggingface import HuggingFaceEndpoint, ChatHuggingFace\n",
+    "\n",
+    "HUGGINGFACEHUB_API_TOKEN = \"...\"\n",
+    "\n",
+    "llm = HuggingFaceEndpoint(\n",
+    "    repo_id=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "    task=\"text-generation\",\n",
+    "    max_new_tokens=512,\n",
+    "    provider=\"novita\",\n",
+    "    huggingfacehub_api_token=HUGGINGFACEHUB_API_TOKEN,\n",
+    ")\n",
+    "\n",
+    "chat = ChatHuggingFace(llm=llm, verbose=True)\n",
+    "\n",
+    "\n",
+    "messages = [(\"system\", \"You are a helpful translator. Translate the user sentence to Spanish.\"), (\"human\", \"I love programming.\"), ]\n",
+    "chat.invoke(messages)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "20a30e5b",
    "metadata": {},
